# devops_labs

./: Dockerfile  FuncA  FuncA.cpp  FuncA.h  HTTP_Server  HTTP_Server.cpp  Makefile  Makefile.am  Makefile.in  calculateTime.cpp  calculateTime.h  config.status  configure.ac  configure~  main  main.cpp  scriptA.sh  terminalCommandRunner.sh  unitTest  unitTest.cpp
.deps/: HTTP_Server.Po  calculateTime.Po  main.Po
.github/workflows/: c-cpp.yml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
debian/: changelog  control  rules
