AUTOMAKE_OPTIONS = foreign
bin_PROGRAMS = FuncA
check_PROGRAMS = test_func_a
test_func_a_SOURCES = unitTest.cpp FuncA.cpp FuncA.h calculateTime.cpp calculateTime.h


TESTS = test_func_a
FuncA_SOURCES = main.cpp FuncA.cpp FuncA.h HTTP_Server.cpp calculateTime.cpp calculateTime.h
FuncA_LDFLAGS = -static 
EXTRA_DIST = Makefile.am
